[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

[lib]
name = "keylogger"
path = "src/lib.rs"


[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
x11rb = { version = "0.13.1", features = ["allow-unsafe-code", "record", "xkb"] }
